# autoresearch-rustbrain

./: README.md  results.tsv  train.py
backends/rust/: Cargo.toml  README.md  RUSTBRAIN_README.md  compare_train.py  feeder.py
backends/rust/brain/: Cargo.toml  build.rs
backends/rust/brain/fa3/: build_fa3.sh  deploy_and_build.sh  flash3_api.cu
backends/rust/brain/kernels/: adamw.cu  cross_entropy.cu  cross_entropy.cu.vec  elementwise.cu  embedding.cu  fused_norm_residual.cu  fused_norm_residual.cu.vec  layer_stat.cu  muon.cu  relu_sq.cu  residual_scale.cu  rms_norm.cu  rms_norm.cu.vec  rope.cu  rope.cu.vec  softcap.cu  ve_apply.cu
backends/rust/brain/src/: backward.rs  buffer.rs  config.rs  ffi.rs  forward.rs  gemm.rs  init_weights.rs  lib.rs  main.rs  optim.rs  train.rs
backends/rust/brain/src/feeder/: download.rs  mod.rs  packing.rs  tokenizer.rs
backends/rust/brain/tools/: convert_tokenizer.py  diagnostic.py  generate_init_weights.py  multi_epoch.py
